packages/isar_community_generator/test/errors/index/non_unique_replace.dart
// only unique indexes can replace

import 'package:isar_community/isar_community.dart';

@collection
class Model {
  Id? id;

  @Index(replace: true)
  String? str;
}
